@@ -1,25 +1,0 @@
-#!/bin/sh
-
-GTKDIALOG=gtkdialog
-
-export MAIN_DIALOG='
-<window>
-	<vbox>
-		<list>
-			<variable>LIST</variable>
-			<item>First item</item>
-			<item>Second item</item>
-			<item>Third item</item>
-		</list>
-		<hbox>
-			<button ok></button>
-			<button cancel></button>
-		</hbox>
-	</vbox>
-</window>
-'
-
-case $1 in
-	-d | --dump) echo "$MAIN_DIALOG" ;;
-	*) $GTKDIALOG --program=MAIN_DIALOG ;;
-esac
